Moved all components to the common api file

--- a/tenant_config_service/api.yml
+++ b/tenant_config_service/api.yml
@@ -9,9 +9,124 @@ tags:
     description: Configuration entries for tenants
 paths:
   '/config/{id}':
-    $ref: './paths/config.yml'
+    get:
+      tags:
+        - config
+      summary: Retrieve Tenant Specific Configuration
+      description: |
+        Retrieves Tenant Configuration for the corresponding identifier.
+      operationId: RetrieveConfig
+      security: 
+        - oauth:
+          - read
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          minimum: 7
+          maximum: 10
+          format: int32
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema: 
+                $ref: '#/components/schemas/Configuration'
+        '401':
+          description: Not Authorized
+        '403':
+          description: Unauthorized
+        '404':
+          description: Not found
+        '406':
+          description: Not acceptable
+        '429':
+          description: Too many requests
+
+    post:
+      summary: Create Tenant Specific Configuration
+      description: |
+        Creates a new tenant config if the input tenant ID is not present.
+      operationId: UpdateConfig
+      security: 
+        - oauth:
+          - read
+          - write
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          minimum: 7
+          maximum: 10
+          format: int32
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema: 
+                $ref: '#/components/schemas/Configuration'
+        '401':
+          description: Not Authorized
+        '403':
+          description: Unauthorized
+        '404':
+          description: Not found
+        '406':
+          description: Not acceptable
+        '429':
+          description: Too many requests
+
+    put:
+      summary: Create/Update Tenant Specific Configuration
+      description: |
+        Partial update of configuration of existing tenant identifier is passed then the configuration is updated.
+      operationId: CreateConfig
+      security: 
+        - oauth:
+          - read
+          - write
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          minimum: 7
+          maximum: 10
+          format: int32
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema: 
+                $ref: '#/components/schemas/Configuration'
+        '401':
+          description: Not Authorized
+        '403':
+          description: Unauthorized
+        '404':
+          description: Not found
+        '406':
+          description: Not acceptable
+        '429':
+          description: Too many requests
 
 components: 
+  schemas:
+    Configuration:
+      type: object
+      properties:
+        tenant-name:
+          description: Readable name of the tenant
+          type: string
+
   securitySchemes: 
     oauth:
       type: oauth2
